<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ict376.murdoch.edu.au.braid.AddBookActivityFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/et_currentpage"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintBottom_toTopOf="@+id/button_addBook"
        app:layout_constraintLeft_toLeftOf="@+id/et_totalpages"
        app:layout_constraintRight_toRightOf="@+id/et_totalpages"
        app:layout_constraintTop_toBottomOf="@+id/tv_totalPages"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/addBookTV"
        android:layout_width="132dp"
        android:layout_height="29dp"
        android:layout_marginLeft="126dp"
        android:layout_marginTop="15dp"
        android:text="Add a book"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="126dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/et_title"
        tools:layout_constraintBottom_creator="1" />

    <Button
        android:id="@+id/button_addBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Book"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/et_currentpage" />

    <Button
        android:id="@+id/button_takeCoverPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Take Photo"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="36dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_title"
        android:layout_marginRight="36dp" />

    <TextView
        android:id="@+id/tv_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_cover"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_genre"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_categorie"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_publisher"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tv_publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_publisher"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_publishedDate"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_rating"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_totalPages"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tv_totalPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_totalpages"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_currentPage"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tv_currentPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_currentpage"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="76dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tv_publishedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_publisheddate"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/et_rating"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="53dp"
        app:layout_constraintTop_toTopOf="@+id/et_genre" />

    <TextView
        android:id="@+id/tv_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/textView_isbn"
        app:layout_constraintBottom_toTopOf="@+id/tv_cover"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/textView_title"
        app:layout_constraintBottom_toTopOf="@+id/tv_isbn"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/et_isbn"
        android:layout_width="48dp"
        android:layout_height="30dp"
        android:ems="10"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/et_cover"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/et_cover"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/button_takeCoverPhoto"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/et_cover"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/et_genre"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/et_genre"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/et_genre" />

    <EditText
        android:id="@+id/et_publisher"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/et_pubdate"
        android:layout_marginStart="34dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/tv_publishedDate"
        android:layout_marginLeft="34dp" />

    <EditText
        android:id="@+id/et_pubdate"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/et_publisher"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/et_publisher"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/et_rating" />

    <EditText
        android:id="@+id/et_rating"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintBottom_toTopOf="@+id/et_totalpages"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/et_pubdate"
        app:layout_constraintLeft_toLeftOf="@+id/et_pubdate" />

    <EditText
        android:id="@+id/et_totalpages"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="text|number"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintBottom_toTopOf="@+id/et_currentpage"
        app:layout_constraintLeft_toLeftOf="@+id/et_rating"
        app:layout_constraintRight_toRightOf="@+id/et_rating"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/et_genre"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/et_publisher"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/et_publisher"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/et_publisher" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintBottom_toTopOf="@+id/et_isbn"
        app:layout_constraintLeft_toLeftOf="@+id/et_isbn"
        app:layout_constraintRight_toRightOf="@+id/et_isbn"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/iv_coverThumbnail"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintBottom_toTopOf="@+id/et_isbn"
        app:layout_constraintLeft_toRightOf="@+id/et_isbn"
        app:layout_constraintRight_toLeftOf="@+id/button_takeCoverPhoto"
        app:layout_constraintTop_toTopOf="@+id/et_isbn"
        app:srcCompat="@android:color/black"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
